Kubernetes-Manifest-Files/Backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cda
  labels:
    app: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - name: backend
        image: 058264381564.dkr.ecr.us-east-1.amazonaws.com/backend:8
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
